k8s-namespace-setup.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: myapp
