bloc-service-dep.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-service-blocdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-service-blocdb
  template:
    metadata:
      labels:
        app: db-service-blocdb
    spec:
      containers:
        - name: db
          image: postgres:latest
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: db-service-blocdb
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: db-service-blocdb

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bloc-service-deployment
spec:
  selector:
    matchLabels:
      app: bloc-service
  replicas: 1
  template:
    metadata:
      labels:
        app: bloc-service
    spec:
      containers:
        - name: bloc-service
          image: samixouerfelli/bloc-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8050
---
apiVersion: v1
kind: Service
metadata:
  name: bloc-service-ssvc
spec:
  selector:
    app: bloc-service
  ports:
    - protocol: "TCP"
      port: 8050
      targetPort: 8050
  type: ClusterIP
