chambre-dep.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chambre-service-deployment
spec:
  selector:
    matchLabels:
      app: chambre-service
  replicas: 1
  template:
    metadata:
      labels:
        app: chambre-service
    spec:
      containers:
        - name: chambre-service
          image: samixouerfelli/chambre-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8051
---
apiVersion: v1
kind: Service
metadata:
  name: chambre-service-ssvc
spec:
  selector:
    app: chambre-service
  ports:
    - protocol: "TCP"
      port: 8051
      targetPort: 8051
  type: ClusterIP
