config-service-dep.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server-deployment
  namespace: webapps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
        - name: config-server
          image: samixouerfelli/config-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: config-server-service
  namespace: webapps
spec:
  selector:
    app: config-server
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
  type: ClusterIP
