discovery-service-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-server
  namespace: webapps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery-server
  template:
    metadata:
      labels:
        app: discovery-server
    spec:
      containers:
        - name: discovery-server
          image: samixouerfelli/discovery-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: discovery-service
  namespace: webapps
spec:
  selector:
    app: discovery-server
  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761
  type: LoadBalancer
