etudiant-dep.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-service-etudiantdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-service-etudiantdb
  template:
    metadata:
      labels:
        app: db-service-etudiantdb
    spec:
      containers:
        - name: db
          image: postgres:latest
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: db-service-etudiantdb
spec:
  type: ClusterIP
  ports:
    - port: 5434
      targetPort: 5432
  selector:
    app: db-service-etudiantdb

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etudiant-service-deployment
spec:
  selector:
    matchLabels:
      app: etudiant-service
  replicas: 1
  template:
    metadata:
      labels:
        app: etudiant-service
    spec:
      containers:
        - name: etudiant-service
          image: samixouerfelli/etudiant-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8052
---
apiVersion: v1
kind: Service
metadata:
  name: etudiant-service-ssvc
spec:
  selector:
    app: etudiant-service
  ports:
    - protocol: "TCP"
      port: 8052
      targetPort: 8052
  type: ClusterIP
