gateway-dep.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service-deployment
spec:
  selector:
    matchLabels:
      app: gateway-service
  replicas: 1
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
        - name: gateway-service
          image: samixouerfelli/gateway-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9999
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service-ssvc
spec:
  selector:
    app: gateway-service
  ports:
    - protocol: "TCP"
      port: 9999
      targetPort: 9999
  type: LoadBalancer
