reservation-dep.yml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reservation-service-deployment
spec:
  selector:
    matchLabels:
      app: reservation-service
  replicas: 1
  template:
    metadata:
      labels:
        app: reservation-service
    spec:
      containers:
        - name: reservation-service
          image: samixouerfelli/reservation-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8054
---
apiVersion: v1
kind: Service
metadata:
  name: reservation-service-ssvc
spec:
  selector:
    app: reservation-service
  ports:
    - protocol: "TCP"
      port: 8054
      targetPort: 8054
  type: ClusterIP
