universite-dep.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-service-universitedb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-service-universitedb
  template:
    metadata:
      labels:
        app: db-service-universitedb
    spec:
      containers:
        - name: db
          image: postgres:latest
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: db-service-universitedb
spec:
  type: ClusterIP
  ports:
    - port: 5437
      targetPort: 5432
  selector:
    app: db-service-universitedb

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: universite-service-deployment
spec:
  selector:
    matchLabels:
      app: universite-service
  replicas: 1
  template:
    metadata:
      labels:
        app: universite-service
    spec:
      containers:
        - name: universite-service
          image: samixouerfelli/universite-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8055
---
apiVersion: v1
kind: Service
metadata:
  name: universite-service-ssvc
spec:
  selector:
    app: universite-service
  ports:
    - protocol: "TCP"
      port: 8055
      targetPort: 8055
  type: ClusterIP
